--- a/app/globals.css
+++ b/app/globals.css
@@ -161,3 +161,9 @@ html[dir="rtl"] h6 {
     width: 100%;
     animation: progressAr linear forwards;
 }
+.grid-overlay {
+    background-image: 
+        linear-gradient(to right, rgba(255,255,255,0.05) 1px, transparent 1px),
+        linear-gradient(to bottom, rgba(255,255,255,0.05) 1px, transparent 1px);
+    background-size: 40px 40px;
+}
